tests/errors/sem7.kt
fun main() {
    var x: Int = 5;
    x = 3.14; // mismatch
}